@@ -1,12 +1,9 @@
 <!doctype HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.21 2003/09/01 16:00:00 bill_clementson Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.22 2003/09/02 14:13:10 bill_clementson Exp $	 -->
 <html>
 
 <head>
-<meta http-equiv="Content-Language" content="en-us">
-<meta name="GENERATOR" content="Microsoft FrontPage 5.0">
-<meta name="ProgId" content="FrontPage.Editor.Document">
-<title>The Common Lisp Cookbook - Setting up an IDE with Emacs on Windows
+<title>The Common Lisp Cookbook - Setting up an IDE with Emacs on Windows or Mac OS X
 </title>
 <style type="text/css">pre          { background-color: #e0e0e0; margin-left: 20px }
 </style>
